--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Minimal Mistakes
 locale:           en_US
-url:              //mmistakes.github.io/minimal-mistakes
+url:              //lb1253.github.io/minimal-mistakes
 
 
 # Jekyll configuration
