--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "Lucas Batt"
-  avatar           : 
+  avatar           : lb.jpg
   bio              : 
   location         :
   email            : 
@@ -115,7 +115,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : l_ucsasbatt
+  twitter          : l_ucasbatt
   vine             :
   weibo            :
   xing             :
