--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
       # url:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/l_ucasbatt"
+       url: "https://twitter.com/l_ucasbatt"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
