--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,27 +1,21 @@
 # main links
 main:
  - title: "Portfolio"
-    children:
-      - title: "Colourblind Map"
-        url: /portfolio/colourblindmap/
-      - title: "Council House Auctions"
-        url: /portfolio/councilauctions/
-      - title: "Council Stress"
-        url: /portfolio/councilstress/
-      - title: "Deprivation vs Democracy"
-        url: /portfolio/deprivation-vs-democracy/
-      - title: "Mapping distribution Venues"
-        url: /portfolio/distribution/
+   url: /portfolio/
+- title: "About"
+   url: /about/
 
-# sidebar navigation list sample
+# sidebar navigation
 #sidebar-sample:
- # - title: "Parent Page A"
-  #  children:
-   #   - title: "Child Page A1"
-    #    url: /child-page-a1/
-     # - title: "Child Page A2"
-      #  url: /child-page-a2/
-      # title: "Child Page A3"
-      #  url: /child-page-a3/
-      #- title: "Child Page A4"
-      #  url: /child-page-a4/
+# - title: "Portfolio"
+#    children:
+#      - title: "Colourblind Map"
+#        url: /portfolio/colourblindmap/
+#      - title: "Council House Auctions"
+#        url: /portfolio/councilauctions/
+#      - title: "Council Stress"
+#        url: /portfolio/councilstress/
+#      - title: "Deprivation vs Democracy"
+#        url: /portfolio/deprivation-vs-democracy/
+#      - title: "Mapping distribution Venues"
+#        url: /portfolio/distribution/
