--- a/_config.yml
+++ b/_config.yml
@@ -241,6 +241,13 @@ whitelist:
   - jekyll-feed
   - jekyll-include-cache
 
+
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
+
 # Archives
 #  Type
 #  - GitHub Pages compatible archive pages built with Liquid ~> type: liquid (default)
