--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Journalism"
+    url: /journalism/
   - title: "About"
     url: /about/
