--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -251,7 +251,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _portfolio
+  # _journalism
   - scope:
       path: ""
       type: journalism
