--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-78544162-1"
+  provider               : "custom"
 
 # Google AdSense
 google_ad_client         :
